enlazando styles.css al index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pagina con Flexbox</title>
   <link rel="shortcut icon" href="img/icono.png" type="image/x-icon">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   
