agregando barra de navegacion al index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+  <div class="container">
+
+    <nav class="nav-main">
+      <img src="" alt="">
+      <ul class="nav-menu">
+        <li>
+          <a href="#">Inicio</a>
+        </li>
+        <li>
+          <a href="#">Desarrollo Web</a>
+        </li>
+        <li>
+          <a href="#">Desarrollo Móvil</a>
+        </li>
+        <li>
+          <a href="#">Inteligencia Artificial</a>
+        </li>
+        <li>
+          <a href="#">Electronica</a>
+        </li>
+      </ul>
+      <ul class="nav-social-network">
+        <li>
+          <a href="#"></a>
+        </li>
+        <li>
+          <a href=""></a>
+        </li>
+      </ul>
+    </nav>
+
+
+  </div>
 </body>
 </html>
