se agrego logo en barra de navegacion en el archivo.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="container">
 
     <nav class="nav-main">
-      <img src="" alt="">
+      <img src="img/logo.ico" alt="logo">
       <ul class="nav-menu">
         <li>
           <a href="#">Inicio</a>
