agrego nueva class en barra de navegacion

--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
           <a href="#">Electronica</a>
         </li>
       </ul>
-      <ul class="nav-social-network">
+      <ul class="nav-menu  nav-social-network">
         <li>
-          <a href="#"></a>
+          <a href="#">f</a>
         </li>
         <li>
-          <a href=""></a>
+          <a href="#">g</a>
+        </li>
+        <li>
+          <a href="#">l</a>
+        </li>
+        <li>
+          <a href="#">t</a>
         </li>
       </ul>
     </nav>
