se agrego al new-cards al index.html

--- a/index.html
+++ b/index.html
@@ -61,6 +61,41 @@
       </span>
     </section>
 
+    <div class="new-cards">
+      <div>
+        <h3>Desarrollo</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. In veritatis sit porro repellendus?
+          Lorem, ipsum dolor.
+        </p>
+        <a href="#">Seguir leendo..</a>
+      </div>
+            <div>
+        <h3>Móvil</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. In veritatis sit porro repellendus?
+          Lorem, ipsum dolor.
+        </p>
+        <a href="#">Seguir leendo..</a>
+      </div>
+            <div>
+        <h3>Redes</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. In veritatis sit porro repellendus?
+          Lorem, ipsum dolor.
+        </p>
+        <a href="#">Seguir leendo..</a>
+      </div>
+        <div>
+        <h3>Inteligencia Artificial</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. In veritatis sit porro repellendus?
+          LoremA, ipsum dolor.
+        </p>
+        <a href="#">Seguir leendo..</a>
+      </div>
+    </div>
+
   </div>
 </body>
 </html>
