se agrego nueva seccion

--- a/index.html
+++ b/index.html
@@ -107,6 +107,45 @@
       </p>
     </div>
 
+        <div class="new-cards">
+      <div>
+        <img src="./img/card_!.jpg" alt="card 1">
+        <h3>Desarrollo</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. In veritatis sit porro repellendus?
+          Lorem, ipsum dolor.
+        </p>
+        <a href="#">LEAR MODE >></a>
+      </div>
+      <div>
+        <img src="./img/card_2.jpg" alt="card 2">
+        <h3>Móvil</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. In veritatis sit porro repellendus?
+          Lorem, ipsum dolor.
+        </p>
+        <a href="#">LEAR MODE >></a>
+      </div>
+        <div>
+          <img src="./img/card_3.png" alt="card 3">
+        <h3>Redes</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. In veritatis sit porro repellendus?
+          Lorem, ipsum dolor.
+        </p>
+        <a href="#">LEAR MODE >></a>
+      </div>
+        <div>
+          <img src="./img/card_4.jpg" alt="card 4">
+        <h3>Inteligencia Artificial</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. In veritatis sit porro repellendus?
+          LoremA, ipsum dolor.
+        </p>
+        <a href="#">LEAR MODE >></a>
+      </div>
+    </div>
+
   </div>
 </body>
 </html>
