se agrego una nueva seccion secundaria

--- a/index.html
+++ b/index.html
@@ -146,6 +146,22 @@
       </div>
     </div>
 
+    <section id="principal" class="secundario">
+      <span>Lorem ipsum dolor sit, amet consectetur 
+        adipisicing elit. Quas quam pariatur corporis 
+        iure ducimus minus dolorum qui aliquam at quaerat 
+        accusamus minima illum eligendi nulla ratione earum, 
+        tempore, illo odio quis voluptatem veniam! Iusto 
+        tempore, eius soluta eaque ipsam quae quisquam atque 
+        natus qui incidunt modi nemo saepe eum? Ipsam, ea velit, 
+        excepturi debitis magni quasi est ab reiciendis ullam atque 
+        veniam? Excepturi atque dolor maxime nostrum incidunt nisi  
+            <div>
+        <a href="#">link>></a>
+      </div>
+      </span>
+    </section>
+
   </div>
 </body>
 </html>
