agrego nuevos elementos

--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@
       </span>
     </section>
 
+    <footer>
+      <p>
+        Desarrollado por Andhy Ralac&copy;
+      </p>
+    </footer>
+
   </div>
 </body>
 </html>
