se realizo el responsive web

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   <title>Pagina con Flexbox</title>
   <link rel="shortcut icon" href="img/icono.png" type="image/x-icon">
   <link rel="stylesheet" href="css/styles.css">
+   <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
+
+  <div class="menu-btn">
+    <img src="./img/menu.png" alt="menu">
+  </div>
+
   <div id="container">
 
     <nav class="nav-main">
@@ -45,7 +51,7 @@
       </ul>
     </nav>
 
-    <section id="principal">
+    <section id="principal" class="one">
       <span>Lorem ipsum dolor sit, amet consectetur 
         adipisicing elit. Quas quam pariatur corporis 
         iure ducimus minus dolorum qui aliquam at quaerat 
@@ -107,7 +113,7 @@
       </p>
     </div>
 
-        <div class="new-cards">
+        <div class="new-cards two">
       <div>
         <img src="./img/card_!.jpg" alt="card 1">
         <h3>Desarrollo</h3>
@@ -169,5 +175,7 @@
     </footer>
 
   </div>
+  <script src="./javascript/main.js"></script>
+
 </body>
 </html>
